--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.backend</groupId>
 	<artifactId>remo</artifactId>
-	<version>0.0.1-SNAPSHOT<uversion>
+	<version>0.0.1-SNAPSHOT</version>
 	<name>remo</name>
 	<description>Remo project </description>
 	<properties>
