--- a/ProjRemo/package.json
+++ b/ProjRemo/package.json
@@ -15,9 +15,12 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "alice-carousel": "^0.0.1",
     "axios": "^1.6.1",
     "bootstrap": "^5.3.2",
+    "node-fetch": "^3.3.2",
     "react": "^18.2.0",
+    "react-alice-carousel": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.17.0",
@@ -25,6 +28,7 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@types/node-fetch": "^2.6.9",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@types/react-vertical-timeline-component": "^3.3.5",
