--- a/ProjRemo/package.json
+++ b/ProjRemo/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.17.0",
+    "react-toastify": "^9.1.3",
     "react-vertical-timeline-component": "^3.6.0",
     "uuid": "^9.0.1"
   },
